Make part 1 shorter and rename files

--- a/bootcamp-warmup/02-component-props.html
+++ b/bootcamp-warmup/02-component-props.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/@babel/standalone@7.14.1/babel.js"></script>
     <script type="text/babel">
         const MyComponent = (
-            props // Try replacing props with object deconstruction
+            props // Try replacing props with object destructuring
         ) => (
             <h1 style={{ color: 'red ' }}>Hello world!</h1> // Replace Hello with the prop greeting
         );
