--- a/bootcamp-warmup/04-event-handlers.html
+++ b/bootcamp-warmup/04-event-handlers.html
@@ -6,8 +6,17 @@
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7.14.1/babel.js"></script>
     <script type="text/babel">
+        const MyComponent = ({ greeting }) => {
+            const [name] = React.useState('Bob'); // You need the setter function, so modify the destructuring
+            // Add an input field below the heading
+            return (
+                <h1 style={{ color: 'red ' }}>
+                    {greeting} {name}!
+                </h1>
+            );
+        };
         const root = document.getElementById('root');
-        // Use JSX to create the element
+        const element = <MyComponent greeting="Greetings" />;
         ReactDOM.render(element, root);
     </script>
 </html>
